SWED-2204 fix inputs layout shift on focus

--- a/src/less/global.less
+++ b/src/less/global.less
@@ -179,6 +179,11 @@
     // line heights
     --line-height-base: 1.5;
 
+    /*
+    * Spacing
+    * ===========================================================================
+    */
+
     /* Spacer */
     --spacer: 1rem; /* Default */
 
@@ -197,6 +202,14 @@
     --base-padding-lg: calc(var(--base-padding) * 1.5);
     --base-padding-xl: calc(var(--base-padding) * 2);
     --base-padding-xxl: calc(var(--base-padding) * 4);
+
+    /* Forms spacing */
+    --input-padding-x: 16px;
+    --input-padding-y: 12px;
+    --border-width: 1px;
+    --border-width-focus: 2px;
+    --border-width-diff-focus: calc(var(--border-width-focus, 2px) - var(--border-width, 1px));
+
 }
 
 
